[gd_scene load_steps=4 format=3 uid="uid://cg6popaxjbvc4"]

[ext_resource type="PackedScene" uid="uid://twouvei3cmnp" path="res://Scene/Entities/Entity.tscn" id="1_bvt52"]
[ext_resource type="Script" path="res://Code/SceneCode/Entities/enemy.gd" id="2_i0hmc"]
[ext_resource type="Theme" uid="uid://bqt13gd00jakt" path="res://Themes/Theme.tres" id="3_sw75k"]

[node name="Enemy" groups=["Enemies"] instance=ExtResource("1_bvt52")]
script = ExtResource("2_i0hmc")

[node name="HPBar" parent="BackUI" index="0"]
offset_top = 106.0
offset_bottom = 138.0

[node name="CurrentInfo" parent="BackUI" index="4"]
visible = false
offset_top = 145.0
offset_bottom = 214.0

[node name="Attack" parent="FrontUI/Buffs/Attack" index="0"]
offset_left = 20.0
offset_top = 0.0
offset_right = 52.0
offset_bottom = 23.0

[node name="Defense" parent="FrontUI/Buffs/Defense" index="0"]
offset_left = 20.0
offset_right = 52.0

[node name="Speed" parent="FrontUI/Buffs/Speed" index="0"]
offset_left = 20.0
offset_right = 56.0

[node name="Luck" parent="FrontUI/Buffs/Luck" index="0"]
offset_left = 20.0
offset_right = 52.0

[node name="NameContainer" type="PanelContainer" parent="." index="5"]
offset_left = -125.0
offset_top = 72.0
offset_right = 131.0
offset_bottom = 100.0

[node name="RichTextLabel" type="RichTextLabel" parent="NameContainer" index="0"]
layout_mode = 2
bbcode_enabled = true
metadata/_edit_lock_ = true

[node name="ScanBox" type="PanelContainer" parent="." index="6"]
visible = false
offset_left = 64.0
offset_top = -113.0
offset_right = 266.0
offset_bottom = 62.0

[node name="ScanDescription" type="RichTextLabel" parent="ScanBox" index="0"]
layout_mode = 2
theme = ExtResource("3_sw75k")
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
metadata/_edit_lock_ = true
